production/namespaces/monitoring/networkpolicies/egress/alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-alertmanager
  namespace: monitoring
spec:
  podSelector: 
    matchLabels:
      app: alertmanager
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: alertmanager
    ports:
    - protocol: TCP
      port: 9094
    - protocol: UDP
      port: 9094
  policyTypes:
  - Egress
