production/namespaces/monitoring/networkpolicies/egress/kube-state-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-kube-state-metrics
  namespace: monitoring
spec:
  podSelector: 
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  egress:
  # Apiserver
  - to:
    - ipBlock:
        cidr: 172.16.0.0/28
    ports:
    - protocol: TCP
      port: 443
  policyTypes:
  - Egress
