production/namespaces/monitoring/networkpolicies/egress/prometheus-admission-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-prometheus-admission-patch
  namespace: monitoring
spec:
  podSelector: 
    matchLabels:
      app: prometheus-admission-patch
  egress:
  # Apiserver
  - to:
    - ipBlock:
        cidr: 172.16.0.0/28
    ports:
    - protocol: TCP
      port: 443
  policyTypes:
  - Egress
